Fix language switcher block alignment on the frontend by scoping width: 100% to alignwide and alignfull only.

--- a/css/src/frontend-switcher.css
+++ b/css/src/frontend-switcher.css
@@ -22,6 +22,9 @@
 }
 .pll-layout-dropdown.wp-block-polylang-language-switcher {
 	box-sizing: border-box;
+}
+.pll-layout-dropdown.wp-block-polylang-language-switcher.alignwide,
+.pll-layout-dropdown.wp-block-polylang-language-switcher.alignfull {
 	width: 100%;
 }
 .pll-layout-dropdown.pll-switcher .pll-submenu-toggle {
